<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="6dp"
    app:cardUseCompatPadding="false"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardCornerRadius="4dp"
    android:layout_height="wrap_content"
    android:id="@+id/cardview">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="39dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="9dp"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_01"
                android:textColor="#000000"
                android:textSize="20sp"
                android:id="@+id/roll1"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poonam_chabukswar"
                android:textColor="#000000"
                android:textSize="20sp"
                android:id="@+id/name1"
                android:layout_marginLeft="56dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:id="@+id/status1"
                android:textStyle="bold"/>


        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>